@@ -136,6 +136,7 @@ pk_cmd_jmd (int argc, struct pk_cmd_arg argv[], uint64_t uflags)
      "<jemarch> a bugfix a day keeps jmd away",
      "<jmd> Did you know that \"Poke\" is a Hawaiian salad?",
      "<jmd> I never place periods after my strncpy.",
+     "<jmd> pokie pokie!",
      NULL
     };
   static int num_strings = 0;
